src/test/compile-fail/pat-ref-enum.rs
fn matcher(x: option<int>) {
    match x {
      ref some(i) => {} //~ ERROR expected identifier, found enum pattern
      none => {}
    }
}

fn main() {}
